force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/BMCServiceDesk__BMC_Printer__c.object-meta.xml
<CustomObject>
    <description>BMC_Printer. CMDB Class that stores information about local and network printers.   This class corresponds to the DMTF CIM_Printer class.</description>
    <label>Printer</label>
    <nameField>
        <label>BMC_Printer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>