force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__AveragePagesPerMinute__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AveragePagesPerMinute__c</fullName>
    <label>Average Pages Per Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>