force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__HorizontalResolution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HorizontalResolution__c</fullName>
    <label>Horizontal Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>