force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__MarkingTechnology__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MarkingTechnology__c</fullName>
    <label>Marking Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Electrophotographic LED</fullName>
            </value>
            <value>
                <fullName>Electrophotographic Laser</fullName>
            </value>
            <value>
                <fullName>Electrophotographic Other</fullName>
            </value>
            <value>
                <fullName>Impact Moving Head Dot Matrix 9pin</fullName>
            </value>
            <value>
                <fullName>Impact Moving Head Dot Matrix 24pin</fullName>
            </value>
            <value>
                <fullName>Impact Moving Head Dot Matrix Other</fullName>
            </value>
            <value>
                <fullName>Impact Moving Head Fully Formed</fullName>
            </value>
            <value>
                <fullName>Impact Band</fullName>
            </value>
            <value>
                <fullName>Impact Other</fullName>
            </value>
            <value>
                <fullName>Inkjet Aqueous</fullName>
            </value>
            <value>
                <fullName>Inkjet Solid</fullName>
            </value>
            <value>
                <fullName>Inkjet Other</fullName>
            </value>
            <value>
                <fullName>Pen</fullName>
            </value>
            <value>
                <fullName>Thermal Transfer</fullName>
            </value>
            <value>
                <fullName>Thermal Sensitive</fullName>
            </value>
            <value>
                <fullName>Thermal Diffusion</fullName>
            </value>
            <value>
                <fullName>Thermal Other</fullName>
            </value>
            <value>
                <fullName>Electroerosion</fullName>
            </value>
            <value>
                <fullName>Electrostatic</fullName>
            </value>
            <value>
                <fullName>Photographic Microfiche</fullName>
            </value>
            <value>
                <fullName>Photographic Imagesetter</fullName>
            </value>
            <value>
                <fullName>Photographic Other</fullName>
            </value>
            <value>
                <fullName>Ion Deposition</fullName>
            </value>
            <value>
                <fullName>eBeam</fullName>
            </value>
            <value>
                <fullName>Typesetter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>