force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__PortName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PortName__c</fullName>
    <label>Port Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>