force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__PrinterCapabilities__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrinterCapabilities__c</fullName>
    <label>Printer Capabilities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>