force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__PrinterLanguageList__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrinterLanguageList__c</fullName>
    <label>Printer Language List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>