force-app/main/default/objects/BMCServiceDesk__BMC_Printer__c/fields/BMCServiceDesk__PrinterType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PrinterType__c</fullName>
    <label>Printer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Local Printer</fullName>
            </value>
            <value>
                <fullName>Network Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>